--- a/UCSC_Course_Planner/templates/404.html
+++ b/UCSC_Course_Planner/templates/404.html
@@ -66,7 +66,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Project name</a>
+            <a class="brand" href="/">Project name</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="active"><a href="">Home</a></li>
@@ -80,13 +80,16 @@
 
 
 <div class="container">
-
-    <form class="form-signin">
+    <br>
+    <div class="alert alert-error">
         <h2 class="form-signin-heading">404 Error Occured...</h2>
         <p> {{ name }}</p>
         <p>{{  greeting|safe }}</p>
-        <p>Sorry about that. Weird Stuff. We are new to this. Please give us a break. Sorry.</p>
-    </form>
+
+    <p>Sorry about that. Weird Stuff. We are new to this. Please give us a break. Sorry.</p>
+        </div >
+        <img src="/static/img/django{{ dognum }}.JPG" style="zoom: 20%;" class="img-circle">
+        </div>
 
 </div> <!-- /container -->
 
