--- a/UCSC_Course_Planner/templates/404.html
+++ b/UCSC_Course_Planner/templates/404.html
@@ -16,30 +16,43 @@
             background-color: #f5f5f5;
         }
 
-        .form-signin {
-            max-width: 300px;
-            padding: 19px 29px 29px;
-            margin: 0 auto 20px;
-            background-color: #fff;
-            border: 1px solid #e5e5e5;
-            -webkit-border-radius: 5px;
-            -moz-border-radius: 5px;
-            border-radius: 5px;
-            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            box-shadow: 0 1px 2px rgba(0,0,0,.05);
+
+            /* Custom container */
+        .container {
+            margin: 0 auto;
+            max-width: 1000px;
         }
-        .form-signin .form-signin-heading,
-        .form-signin .checkbox {
-            margin-bottom: 10px;
+        .container > hr {
+            margin: 60px 0;
         }
-        .form-signin input[type="text"],
-        .form-signin input[type="password"] {
-            font-size: 16px;
-            height: auto;
-            margin-bottom: 15px;
-            padding: 7px 9px;
+
+            /* Main marketing message and sign up button */
+        .jumbotron {
+            margin: 80px 0;
+            text-align: center;
         }
+        .jumbotron h2 {
+            font-size: 50px;
+            line-height: 1;
+        }
+        .jumbotron .lead {
+            font-size: 24px;
+            line-height: 1.25;
+        }
+        .jumbotron .btn {
+            font-size: 21px;
+            padding: 14px 24px;
+        }
+
+            /* Supporting marketing content */
+        .marketing {
+            margin: 60px 0;
+        }
+        .marketing p + h4 {
+            margin-top: 28px;
+        }
+
+
 
     </style>
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
@@ -79,17 +92,21 @@
 </div>
 
 
-<div class="container">
+<div class="container-fluid">
+    <div class="jumbotron">
     <br>
     <div class="alert alert-error">
-        <h2 class="form-signin-heading">404 Error Occured...</h2>
+        <h2 class="jumbotron">404 Error Occured :(</h2>
         <p> {{ name }}</p>
         <p>{{  greeting|safe }}</p>
 
-    <p>Sorry about that. Weird Stuff. We are new to this. Please give us a break. Sorry.</p>
+        <p class="lead">Sorry about that. Weird Stuff. We are new to this and hope to figure it all out soon.</p>
         </div >
+
         <img src="/static/img/django{{ dognum }}.JPG" style="zoom: 20%;" class="img-circle">
         </div>
+    </div>
+
 
 </div> <!-- /container -->
 
