--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -14,6 +14,14 @@
             padding-top: 60px;
             padding-bottom: 40px;
         }
+        .schedule{
+
+        }
+
+        .schedule h2 {
+            text-align: center;
+
+        }
     </style>
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -73,14 +81,26 @@
             <div style="background-color: beige">
             <div class="row">
                 <p>
-                    <a href="#" class="btn btn-primary btn-small">Overview &raquo;</a>
-                    <a href="#" class="btn btn-primary btn-small">Print &raquo;</a>
-                    <a href="#" class="btn btn-primary btn-small">Edit &raquo;</a>
+                    <a href="#" class="btn  btn-small">Overview &raquo;</a>
+                    <a href="#" class="btn  btn-small">Print &raquo;</a>
+                    <a href="#" class="btn  btn-small">Edit &raquo;</a>
                 </p>
             </div>
+
             <h1>Hello, world!</h1>
             <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
             <p></p>
+            </div>
+            <div class="row">
+                <h3 class="schedule" style="text-align:center;" > 2012 - 2013 </h3>
+
+
+            </div>
+            <div class="row">
+                <div class="span2"><b>Fall</b> </div>
+                <div class="span2">Winter </div>
+                <div class="span2">Spring </div>
+                <div class="span2">Summer </div>
             </div>
         </div>
     </div>
