Added the drag and drop example

--- a/UCSC_Course_Planner/templates/404.html
+++ b/UCSC_Course_Planner/templates/404.html
@@ -100,7 +100,7 @@
         <p> {{ name }}</p>
         <p>{{  greeting|safe }}</p>
 
-        <p class="lead">Sorry about that. Weird Stuff. We are new to this and hope to figure it all out soon.</p>
+        <p class="lead">We can't find what you're looking for so all links will lead you there? <br> Sorry about that. Weird Stuff. We are new to this and hope to figure it all out soon.</p>
         </div >
 
         <img src="/static/img/django{{ dognum }}.JPG" style="zoom: 20%;" class="img-circle">
