--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -10,10 +10,44 @@
     <!-- Le styles -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
+        .connectedSortable {
+            list-style-type: none;
+            margin: 0;
+            padding: 0 0 2.5em;
+            float: left;
+            margin-right: 10px;
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            line-height: 20px;
+        }
+
+        .connectedSortable li {
+            margin: 0 5px 5px 5px;
+            padding: 5px;
+            font-size: 1.2em;
+            width: 120px;
+            background-color: whitesmoke;
+            border-color: black;
+            border-bottom-color: rgb(black);
+            border-bottom-style: solid;
+            border-bottom-width: 1px;
+            border-left-color: rgb(black);
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-right-color: rgb(black);
+            border-right-style: solid;
+            border-right-width: 1px;
+            border-top-color: rgb(black);
+            border-top-style: solid;
+            border-top-width: 1px;
+
+        }
+
+
         body {
             padding-top: 60px;
             padding-bottom: 40px;
         }
+
         .schedule{
 
         }
@@ -22,7 +56,11 @@
             text-align: center;
 
         }
+
     </style>
+{#    <script src="/static/js/jquery.js"></script>#}
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -36,6 +74,18 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="/static/ico/favicon.png">
+
+
+
+    <script>
+        $(function() {
+            $( "#sortable1, #sortable2, #sortable3" ).sortable({
+                connectWith: ".connectedSortable"
+            }).disableSelection();
+        });
+    </script>
+
+
 </head>
 
 <body>
@@ -63,7 +113,7 @@
 <div class="container">
 
     <div class="row">
-        <div class="span4">
+        <div class="span3">
             <div style="background-color: beige">
             <h2>News + Info</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus a cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -77,7 +127,7 @@
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
-        <div class="span8">
+        <div class="span9">
             <div style="background-color: beige">
             <div class="row">
                 <p>
@@ -96,11 +146,59 @@
 
 
             </div>
-            <div class="row">
-                <div class="span2"><b>Fall</b> </div>
-                <div class="span2">Winter </div>
-                <div class="span2">Spring </div>
-                <div class="span2">Summer </div>
+
+                <div class="span9">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Fall</th>
+                            <th>Winter</th>
+                            <th>Spring</th>
+                            <th>Summer</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>PHYS 5A/L</td>
+                            <td>CMPS101</td>
+                            <td>DANM</td>
+                            <td>CS109</td>
+                        </tr>
+
+                        <tr>
+                            <td>CMPE 16</td>
+                            <td>CMPE131</td>
+                            <td>Physics 5C / N</td>
+                            <td>Physics 6B with petetion</td>
+                        </tr>
+
+                        <tr>
+                            <td>CMPS12B/L</td>
+                            <td>Math21</td>
+                            <td>AMS20 <br>(maybe Math 24)</td>
+                            <td>CS109</td>
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+                    <ul id="sortable1" class="connectedSortable">
+                        <li class="ui-state-default">PHYS 5A/L</li>
+                        <li class="ui-state-default">CMPS 12B/L</li>
+                        <li class="ui-state-default">CMPE 16</li>
+                    </ul>
+
+                    <ul id="sortable2" class="connectedSortable">
+                        <li class="ui-state-highlight">HCI 131</li>
+                        <li class="ui-state-highlight">CMPS101</li>
+                        <li class="ui-state-highlight">Math 21</li>
+                    </ul>
+
+                    <ul id="sortable3" class="connectedSortable">
+                        <li class="ui-state-default">DANM </li>
+                        <li class="ui-state-default">PHYSC 5C/L</li>
+                        <li class="ui-state-default">AMS 20</li>
+                    </ul>
             </div>
         </div>
     </div>
@@ -116,19 +214,18 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/static/js/jquery.js"></script>
-<script src="/static/js/bootstrap-transition.js"></script>
-<script src="/static/js/bootstrap-alert.js"></script>
-<script src="/static/js/bootstrap-modal.js"></script>
-<script src="/static/js/bootstrap-dropdown.js"></script>
-<script src="/static/js/bootstrap-scrollspy.js"></script>
-<script src="/static/js/bootstrap-tab.js"></script>
-<script src="/static/js/bootstrap-tooltip.js"></script>
-<script src="/static/js/bootstrap-popover.js"></script>
-<script src="/static/js/bootstrap-button.js"></script>
-<script src="/static/js/bootstrap-collapse.js"></script>
-<script src="/static/js/bootstrap-carousel.js"></script>
-<script src="/static/js/bootstrap-typeahead.js"></script>
+{#<script src="/static/js/bootstrap-transition.js"></script>#}
+{#<script src="/static/js/bootstrap-alert.js"></script>#}
+{#<script src="/static/js/bootstrap-modal.js"></script>#}
+{#<script src="/static/js/bootstrap-dropdown.js"></script>#}
+{#<script src="/static/js/bootstrap-scrollspy.js"></script>#}
+{#<script src="/static/js/bootstrap-tab.js"></script>#}
+{#<script src="/static/js/bootstrap-tooltip.js"></script>#}
+{#<script src="/static/js/bootstrap-popover.js"></script>#}
+{#<script src="/static/js/bootstrap-button.js"></script>#}
+{#<script src="/static/js/bootstrap-collapse.js"></script>#}
+{#<script src="/static/js/bootstrap-carousel.js"></script>#}
+{#<script src="/static/js/bootstrap-typeahead.js"></script>#}
 
 </body>
 </html>
