--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -9,6 +9,10 @@
 
     <!-- Le styles -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Used for portlets
+    <link href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" rel="stylesheet">
+    -->
     <style type="text/css">
         .connectedSortable {
             list-style-type: none;
@@ -73,6 +77,18 @@
         }
 
     </style>
+    <!-- styling for portlets -->
+    <style>
+        .column { width: 170px; float: left; padding-bottom: 100px; }
+        .portlet { margin: 0 1em 1em 0; }
+        .portlet-header { margin: 0.3em; padding-bottom: 4px; padding-left: 0.2em; }
+        .portlet-header .ui-icon { float: right; }
+        .portlet-content { padding: 0.4em; }
+        .ui-sortable-placeholder { border: 1px dotted black; visibility: visible !important; height: 50px !important; }
+        .ui-sortable-placeholder * { visibility: hidden; }
+    </style>
+
+
 {#    <script src="/static/js/jquery.js"></script>#}
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
@@ -91,7 +107,7 @@
     <link rel="shortcut icon" href="/static/ico/favicon.png">
 
 
-
+     <!-- for top dragable ui lists -->
     <script>
         $(function() {
             $( "#sortable1, #sortable2, #sortable3, #sortable4" ).sortable({
@@ -100,6 +116,28 @@
         });
     </script>
 
+    <!-- for bottom dragable portlets -->
+    <script>
+        $(function() {
+            $( ".column" ).sortable({
+                connectWith: ".column"
+            });
+
+            $( ".portlet" ).addClass( "ui-widget ui-widget-content ui-helper-clearfix ui-corner-all" )
+                    .find( ".portlet-header" )
+                    .addClass( "ui-widget-header ui-corner-all" )
+                    .prepend( "<span class='ui-icon ui-icon-minusthick'></span>")
+                    .end()
+                    .find( ".portlet-content" );
+
+            $( ".portlet-header .ui-icon" ).click(function() {
+                $( this ).toggleClass( "ui-icon-minusthick" ).toggleClass( "ui-icon-plusthick" );
+                $( this ).parents( ".portlet:first" ).find( ".portlet-content" ).toggle();
+            });
+
+            $( ".column" ).disableSelection();
+        });
+    </script>
 
 </head>
 
@@ -216,9 +254,45 @@
 
 
 
+                    <div class="column">
+
+                        <div class="portlet">
+                            <div class="portlet-header">Feeds</div>
+                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
+                        </div>
+
+                        <div class="portlet">
+                            <div class="portlet-header">News</div>
+                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
+                        </div>
+
+                    </div>
+
+                    <div class="column">
+
+                        <div class="portlet">
+                            <div class="portlet-header">Shopping</div>
+                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
+                        </div>
+
+                    </div>
+
+                    <div class="column">
+
+                        <div class="portlet">
+                            <div class="portlet-header">Links</div>
+                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
+                        </div>
+
+                        <div class="portlet">
+                            <div class="portlet-header">Images</div>
+                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
+                        </div>
+
+                    </div>
 
 
-            </div>
+                </div>
         </div>
     </div>
 
