--- a/UCSC_Course_Planner/templates/home.html
+++ b/UCSC_Course_Planner/templates/home.html
@@ -60,9 +60,11 @@
                     </li>
                 </ul>
                 <form class="navbar-form pull-right">
-                    <input class="span2" type="text" placeholder="Email">
-                    <input class="span2" type="password" placeholder="Password">
-                    <button type="submit" class="btn">Sign in</button>
+{#                    <input class="span2" type="text" placeholder="Email">#}
+{#                    <input class="span2" type="password" placeholder="Password">#}
+                    <button class="btn" type="button" onclick="self.location='{{   logURL|safe}}'"> {% if is_logged_in %}
+                        Logout of {{name}}     {% else %} Login  <img src="/static/img/cruzid_blue60.png" style="zoom: 100%;" > {% endif %}</button>
+
                 </form>
             </div><!--/.nav-collapse -->
         </div>
@@ -82,6 +84,7 @@
     <div class="row">
         <div class="span4">
             <h2>Heading</h2>
+
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details »</a></p>
         </div>
