--- a/UCSC_Course_Planner/templates/login.html
+++ b/UCSC_Course_Planner/templates/login.html
@@ -9,6 +9,8 @@
 
     <!-- Le styles -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
     <style type="text/css">
         body {
             padding-top: 40px;
