Updated the 404 page and made django pics smaller sized

--- a/UCSC_Course_Planner/templates/404.html
+++ b/UCSC_Course_Planner/templates/404.html
@@ -97,6 +97,9 @@
 <div class="container-fluid">
     <div class="jumbotron">
     <br>
+    <div class="row">
+        <div class="span4"></div>
+        <div class="span10">
     <div class="alert alert-error">
         <h2 class="jumbotron">404 Error Occured :(</h2>
         <p> {{ name }}</p>
@@ -106,9 +109,11 @@
         </div >
 
         <img src="/static/img/django{{ dognum }}.JPG" style="zoom: 20%;" class="img-circle">
+         <br>Here's a picture of a dog. Hope this mitigates your pain.
         </div>
     </div>
-
+        </div>
+</div>
 
 </div> <!-- /container -->
 
