Changed the submit button around

--- a/UCSC_Course_Planner/templates/selectmajor.html
+++ b/UCSC_Course_Planner/templates/selectmajor.html
@@ -213,7 +213,7 @@
 
             <p>Lets talk about choosing a major. Maybe Link to resources for choosing your major.
                Then list instructions for how to use this tool. Rules for Double Majoring, minoring, etc.
-                <br>
+                <br><br>
             </p>
             <div class="row">
 
@@ -361,10 +361,10 @@
 
                 </div>
 
-                <hr>
-                <a class="btn" href="#">View details »</a>
-            </div>
 
+            </div>
+            <hr>
+            <a class="btn btn-primary" style=" float: right;" href="#">Next Step »</a>
         </div>
 
         <hr>
