Fucking with units... have to add units to db model maybe

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -8,11 +8,16 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
+
 
     <!-- Used for portlets
     <link href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" rel="stylesheet">
 -->
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+
     <style type="text/css">
         .classHeader{
             font-size: 13pt;
@@ -21,8 +26,15 @@
         }
         .classUnits, .classInstructor, .classTime{
             font-size:  small;
+
             display: none;
         }
+        .classUnits{
+
+            float: right;
+            display: none;
+        }
+
 
         .connectedSortable {
             list-style-type: none;
@@ -90,9 +102,6 @@
 
 
 {#    <script src="/static/js/jquery.js"></script>#}
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -233,22 +242,34 @@
 
                                 <ul id="sortable1" class="connectedSortable">
                                     <li class="ui-state-default">
-                                        <div class="classHeader">PHYS 5A/L<br></div>
+                                        <div class="classHeader">PHYS 5A <span class="classUnits badge badge-info">1</span><br></div>
                                         <div class="classInstructor">Instructor Name<br></div>
                                         <div class="classTime">MWF 12-2pm<br></div>
-                                        <div class="classUnits">5.0</div>
+
                                     </li>
                                     <li class="ui-state-default">
-                                        <div class="classHeader">CMPS 12B/L<br></div>
+                                        <div class="classHeader">PHYS 5L <span class="classUnits badge badge-info">1</span><br></div>
+                                        <div class="classInstructor">Lab Instructor Name<br></div>
+                                        <div class="classTime">TH 8:30am-10am<br></div>
+
+                                    </li>
+                                        <li class="ui-state-default">
+                                        <div class="classHeader">CMPS 12B <span class="classUnits badge badge-info">5</span><br></div>
                                         <div class="classInstructor">W. Mackey<br></div>
                                         <div class="classTime">T/TH 5-6:45pm<br></div>
-                                        <div class="classUnits">5.0</div>
+
                                     </li>
                                     <li class="ui-state-default">
-                                        <div class="classHeader">CMPE 16<br></div>
+                                        <div class="classHeader">CMPS 12L <span class="classUnits badge badge-info">2</span> </div>
+                                        <div class="classInstructor">W. Mackey<br></div>
+                                        <div class="classTime">TBA<br></div>
+
+                                    </li>
+                                    <li class="ui-state-default">
+                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-info">5</span><br></div>
                                         <div class="classInstructor">T. Larabee<br></div>
                                         <div class="classTime">MWF 9:30-10:40am<br></div>
-                                        <div class="classUnits">5.0</div>
+
                                     </li>
                                 </ul>
 
