--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -242,31 +242,31 @@
 
                                 <ul id="sortable1" class="connectedSortable">
                                     <li class="ui-state-default">
-                                        <div class="classHeader">PHYS 5A <span class="classUnits badge badge-info">1</span><br></div>
+                                        <div class="classHeader">PHYS 5A <span class="classUnits badge badge-success">1</span><br></div>
                                         <div class="classInstructor">Instructor Name<br></div>
                                         <div class="classTime">MWF 12-2pm<br></div>
 
                                     </li>
                                     <li class="ui-state-default">
-                                        <div class="classHeader">PHYS 5L <span class="classUnits badge badge-info">1</span><br></div>
+                                        <div class="classHeader">PHYS 5L <span class="classUnits badge badge-success">1</span><br></div>
                                         <div class="classInstructor">Lab Instructor Name<br></div>
                                         <div class="classTime">TH 8:30am-10am<br></div>
 
                                     </li>
                                         <li class="ui-state-default">
-                                        <div class="classHeader">CMPS 12B <span class="classUnits badge badge-info">5</span><br></div>
+                                        <div class="classHeader">CMPS 12B <span class="classUnits badge badge-success">5</span><br></div>
                                         <div class="classInstructor">W. Mackey<br></div>
                                         <div class="classTime">T/TH 5-6:45pm<br></div>
 
                                     </li>
                                     <li class="ui-state-default">
-                                        <div class="classHeader">CMPS 12L <span class="classUnits badge badge-info">2</span> </div>
+                                        <div class="classHeader">CMPS 12L <span class="classUnits badge badge-success">2</span> </div>
                                         <div class="classInstructor">W. Mackey<br></div>
                                         <div class="classTime">TBA<br></div>
 
                                     </li>
                                     <li class="ui-state-default">
-                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-info">5</span><br></div>
+                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-success">5</span><br></div>
                                         <div class="classInstructor">T. Larabee<br></div>
                                         <div class="classTime">MWF 9:30-10:40am<br></div>
 
