Added some stuff to the model and dashboard

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -277,17 +277,66 @@
 
                             </td>
                             <td>
-                                <ul id="sortable2" class="connectedSortable">
-                                <li class="ui-state-highlight" style>HCI 131</li>
-                                <li class="ui-state-highlight">CMPS101</li>
-                                <li class="ui-state-highlight">Math 21</li>
+{#                                <ul id="sortable2" class="connectedSortable">#}
+{#                                <li class="ui-state-highlight" style>HCI 131</li>#}
+{#                                <li class="ui-state-highlight">CMPS101</li>#}
+{#                                <li class="ui-state-highlight">Math 21</li>#}
+
+                                    <ul id="sortable2" class="connectedSortable">
+                                        <li class="ui-state-highlight">
+                                            <div class="classHeader">HCI 131 <span class="classUnits badge badge-success">1</span><br></div>
+                                            <div class="classInstructor">Instructor Name<br></div>
+                                            <div class="classTime">MWF 12-2pm<br></div>
+
+                                        </li>
+
+                                        <li class="ui-state-default">
+                                            <div class="classHeader">CMPS 101 <span class="classUnits badge badge-success">5</span><br></div>
+                                            <div class="classInstructor">M. Warmuth<br></div>
+                                            <div class="classTime">T/TH 5-6:45pm<br></div>
+
+                                        </li>
+                                        <li class="ui-state-default">
+                                            <div class="classHeader">Math 21 <span class="classUnits badge badge-success">5</span> </div>
+                                            <div class="classInstructor">W. Mackey<br></div>
+                                            <div class="classTime">TBA<br></div>
+
+                                        </li>
+
+{#                                    </ul>#}
                             </ul>
                             </td>
                             <td>
-                                <ul id="sortable3" class="connectedSortable">
-                                <li class="ui-state-default">DANM </li>
-                                <li class="ui-state-default">PHYSC 5C/L</li>
-                                <li class="ui-state-default">AMS 20</li>
+
+                                    <ul id="sortable3" class="connectedSortable">
+
+
+                                        <li class="ui-state-default">
+                                            <div class="classHeader">PHYSC 5C <span class="classUnits badge badge-success">5</span><br></div>
+                                            <div class="classInstructor">Namme<br></div>
+                                            <div class="classTime">T/TH 5-6:45pm<br></div>
+
+                                        </li>
+
+                                        <li class="ui-state-highlight">
+                                            <div class="classHeader">DANM 250C<span class="classUnits badge badge-success">5</span><br></div>
+                                            <div class="classInstructor">J. Parker<br></div>
+                                            <div class="classTime">TBA<br></div>
+                                        </li>
+
+                                        <li class="ui-state-default">
+                                            <div class="classHeader">PHYSC 5L <span class="classUnits badge badge-success">1</span><br></div>
+                                            <div class="classInstructor">Lab Instructor Namme<br></div>
+                                            <div class="classTime">TH 8:00am-6:45pm<br></div>
+
+                                        </li>
+
+                                        <li class="ui-state-default">
+                                            <div class="classHeader">AMS <span class="classUnits badge badge-success">5</span> </div>
+                                            <div class="classInstructor">MeowNelson<br></div>
+                                            <div class="classTime">MWF 12:00-1:40pm<br></div>
+
+                                        </li>
                             </ul>
                             </td>
                             <td>
